# elk

./: CMakeLists.txt  Makefile.orig  README  release_notes.txt  setup  spkg-install
elk/: CMakeLists.txt  cdirac.f90  cdirac.pxd  iso_c_utilities.f90  mesh.py  pyelk.pyx
examples/Al/: elk.in
examples/Al-Fermi-surface/: elk.in
examples/Al-exp[iq.r]/: elk.in
examples/Al-libxc/: elk.in
examples/Al-linopt/: elk.in
examples/Al-phonon/: elk.in
examples/BN-ELNES/: elk.in
examples/C60/: elk.in
examples/Cu-ELNES/: Cu+.in  elk.in
examples/CuFeS2/: elk.in
examples/Eu/: elk.in
examples/Fe-FSM/: elk.in
examples/Fe-Fermi-surface/: elk.in
examples/Fe-Mossbauer/: elk.in
examples/Fe-fast/: elk.in
examples/FeAl-LDA+U-AMF/: elk.in
examples/FeAl-LDA+U-INT/: elk.in
examples/GaAs-NLO/: elk.in
examples/H2O-iterative/: elk.in
examples/HfSiO4/: elk.in
examples/LiF/: elk.in
examples/LiF-BSE/: elk.in
species/: Ac.in  Ag.in  Al.in  Am.in  Ar.in  As.in  At.in  Au.in  B.in  Ba.in  Be.in  Bi.in  Bk.in  Br.in  C.in  Ca.in  Cd.in  Ce.in  Cf.in  Cl.in  Cm.in  Co.in  Cr.in  Cs.in  Cu.in  Dy.in  Er.in  Es.in  Eu.in  F.in  Fe.in  Fm.in  Fr.in  Ga.in  Gd.in  Ge.in  H.in  He.in  Hf.in  Hg.in  (+65 more)
src/: CMakeLists.txt  Makefile.orig  addrhocr.f90  allatoms.f90  alpha2f.f90  atom.f90  autoradmt.f90  axangsu2.f90  bandstr.f90  bse.f90  charge.f90  checkfsm.f90  checkmt.f90  connect.f90  delevec.f90  dielectric.f90  dielectric_bse.f90  dm2tensmom.f90  dmplz.f90  dos.f90  drhomagk.f90  drhomagsh.f90  dynqtor.f90  dynsym.f90  dyntask.f90  effmass.f90  elfplot.f90  elnes.f90  energy.f90  energykncr.f90  energynn.f90  engyflu.f90  epcouple.f90  epsinv_rpa.f90  exxengy.f90  exxengyk.f90  factnm.f90  factr.f90  fderiv.f90  fermisurf.f90  (+247 more)
tests/: tests.sh
(+183 files in other folders)
